--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -21,6 +21,10 @@
   display: flex;
   justify-content: center; }
 
+.button-parent {
+  display: flex;
+  justify-content: center; }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg); }
