--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -27,6 +27,11 @@
   justify-content: center;
 }
 
+.button-parent {
+  display: flex;
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
