--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,21 +1,6 @@
 .App {
-  text-align: center; }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px; }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white; }
-
-.App-title {
-  font-size: 1.5em; }
-
-.App-intro {
-  font-size: large; }
+  display: flex;
+  align-items: center; }
 
 .header-parent {
   display: flex;
@@ -25,8 +10,11 @@
   display: flex;
   justify-content: center; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+.movie-parent {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  width: 20%; }
+
+.main-section {
+  width: 80%; }
