--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,4 +1,4 @@
-.App {
+.app {
   display: flex;
   align-items: center; }
 
@@ -13,6 +13,7 @@
 .movie-parent {
   display: flex;
   justify-content: center;
+  height: 100vh;
   margin: 0;
   width: 20%; }
 
