--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,4 +1,4 @@
-.App {
+.app {
   display: flex;
   align-items: center;
 }
@@ -16,6 +16,7 @@
 .movie-parent {
   display: flex;
   justify-content: center;
+  height: 100vh;
   margin: 0;
   width: 20%;
 }
