--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90vw; }
+  width: 90%; }
 
 .favorites-button {
   height: 3rem;
