--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -3,10 +3,12 @@
   align-items: center; }
 
 .header-parent {
+  color: #f3f3f3;
   display: flex;
   justify-content: center; }
 
 .button-parent {
+  color: #f3f3f3;
   display: flex;
   justify-content: center; }
 
@@ -15,7 +17,14 @@
   justify-content: center;
   height: 100vh;
   margin: 0;
-  width: 20%; }
+  width: 25%; }
+
+.card-container-parent {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center; }
 
 .main-section {
-  width: 80%; }
+  width: 75%;
+  height: 100vh;
+  background-image: url(https://wallpaper-house.com/data/out/7/wallpaper2you_150538.png); }
