--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -4,11 +4,13 @@
 }
 
 .header-parent {
+  color: #f3f3f3;
   display: flex;
   justify-content: center;
 }
 
 .button-parent {
+  color: #f3f3f3;
   display: flex;
   justify-content: center;
 }
@@ -18,9 +20,17 @@
   justify-content: center;
   height: 100vh;
   margin: 0;
-  width: 20%;
+  width: 25%;
+}
+
+.card-container-parent {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 .main-section {
-  width: 80%;
+  width: 75%;
+  height: 100vh;
+  background-image: url(https://wallpaper-house.com/data/out/7/wallpaper2you_150538.png)
 }
