Add button class to persist

--- a/src/components/MovieText/styles.css
+++ b/src/components/MovieText/styles.css
@@ -2,7 +2,8 @@
   color: #ddbe24;
   font-weight: bolder;
   text-align: center;
-  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsWrlqShOpNL4SbAwB24CkJuGgezSJoX5KDsQDGPvTWpa-MtZ8mw); }
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsWrlqShOpNL4SbAwB24CkJuGgezSJoX5KDsQDGPvTWpa-MtZ8mw); 
+}
 
 .crawl-text {
   font-size: 35px; }
