--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -12,3 +12,14 @@
 .clicked {
   background-color: red;
 }
+
+.fifth-data {
+  font-size: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 0 auto;
+}
+
+h5 {
+  margin: 0;
+}
