--- a/src/components/CardContainer/styles.css
+++ b/src/components/CardContainer/styles.css
@@ -1,5 +1,7 @@
 .card-container {
-  background-color: grey;
   flex-wrap: wrap;
   width: 90%;
   display: flex; }
+
+.favorites-text {
+  color: #f4f4f4; }
