--- a/src/components/CardContainer/styles.scss
+++ b/src/components/CardContainer/styles.scss
@@ -1,6 +1,10 @@
 .card-container {
-  background-color: grey;
+  // background-color: grey;
   flex-wrap: wrap;
   width: 90%;
   display: flex;
+}
+
+.favorites-text {
+  color: #f4f4f4;
 }
