--- a/src/components/LoadingPage/styles.scss
+++ b/src/components/LoadingPage/styles.scss
@@ -1,9 +1,26 @@
-.loading-page {
+.loading-page-people {
   width: 100vw;
   height: 100vh;
   background-image: url(https://steamusercontent-a.akamaihd.net/ugc/916918850613696016/E5903247129038C83FB540F2A32CEF4A388E2C72/);
   // background-image: url(http://i.imgur.com/tbVomBn.gif);
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  
+}
+
+.loading-page-planets {
+  width: 100vw;
+  height: 100vh;
+  // background-image: url(https://media.giphy.com/media/NGIfqtcS81qi4/giphy.gif);
+  background-image: url(https://pa1.narvii.com/6335/6ded4e2d3e8f52689fb49c0f52b7b248eab57859_hq.gif);
+
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.loading-page-vehicles {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(https://cdn-images-1.medium.com/max/2000/1*cgz_L67P_7WtCnMMdeCRNA.gif);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
