--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -13,7 +13,12 @@
   font-size: 15px;
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 0 auto; }
+  padding-bottom: 0 auto;
+  margin-bottom: 20px; }
 
 h5 {
   margin: 0; }
+
+.spacing {
+  margin: 0 5px;
+  color: grey; }
