--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -27,7 +27,8 @@
 .card-container-parent {
   margin-top: 2rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+
 }
 
 .main-section {
