--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,13 +1,39 @@
 .card {
+  background-repeat: no-repeat;
+  border-radius: 15px;
+  box-shadow: 10px 5px 5px #202020;
+  background-size: contain;
+  justify-content: space-around;
   display: flex;
   flex-direction: column;
-  width: 20rem; }
+  margin-bottom: 1rem;
+  width: 20rem;
+  height: 23.5rem; }
+
+.fav-button:hover {
+  background-color: #F7D700; }
 
 .card-data {
+  overflow-wrap: normal;
   color: white; }
 
+.button-spacing {
+  display: flex;
+  justify-content: flex-end; }
+
+.fav-button {
+  cursor: pointer;
+  height: 3rem;
+  border-radius: 10px;
+  margin-right: .8rem;
+  outline: none;
+  width: 15%;
+  color: white;
+  background-color: black; }
+
 .clicked {
-  background-color: red; }
+  outline: none;
+  background-color: #F7D700; }
 
 .fifth-data {
   font-size: 15px;
@@ -16,8 +42,15 @@
   padding-bottom: 0 auto;
   margin-bottom: 20px; }
 
+h4 {
+  font-size: 1rem; }
+
 h5 {
   margin: 0; }
+
+h2 {
+  font-size: 2rem;
+  text-align: center; }
 
 .spacing {
   margin: 0 5px;
