--- a/src/components/CardContainer/styles.css
+++ b/src/components/CardContainer/styles.css
@@ -1,7 +1,8 @@
 .card-container {
   flex-wrap: wrap;
-  width: 90%;
-  display: flex; }
+  width: 100%;
+  display: flex;
+  justify-content: space-around; }
 
 .favorites-text {
   color: #f4f4f4; }
