--- a/src/components/CardContainer/styles.scss
+++ b/src/components/CardContainer/styles.scss
@@ -1,8 +1,8 @@
 .card-container {
-  // background-color: grey;
   flex-wrap: wrap;
-  width: 90%;
+  width: 100%;
   display: flex;
+  justify-content: space-around;
 }
 
 .favorites-text {
