--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,7 +1,20 @@
 .button-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 40vw; }
+
+.button {
+  height: 40px;
+  width: 350px;
+  border: solid 2px white;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .button:hover {
   cursor: pointer; }
+
+.selected {
+  color: #f7d700;
+  border-color: #f7d700; }
