--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -1,19 +1,14 @@
 .card {
-  // background-color: white;
   background-repeat: no-repeat;
   border-radius: 15px;
   box-shadow: 10px 5px 5px rgb(32, 32, 32);
   background-size: contain;
-  justify-content: space-around;
+  // justify-content: space-around;
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
   width: 20rem;
   height: 23.5rem;
-}
-
-.fav-button:hover {
-  background-color: #F7D700;
 }
 
 .card-data {
@@ -32,7 +27,7 @@
   border-radius: 10px;
   margin-right: .8rem;
   outline: none;
-  width: 15%;
+  width: 3rem;
   color: white;
   background-color: black;
 }
@@ -51,7 +46,7 @@
 }
 
 h4 {
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 
 h5 {
@@ -60,10 +55,15 @@ h5 {
 
 h2 {
   font-size: 2rem;
-  text-align: center;
 }
 
 .spacing {
   margin: 0 5px;
   color: grey;
+}
+
+.first-data {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
 }
