--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -6,10 +6,16 @@
 
 .favorites-button {
   height: 3rem;
-  width: 8rem;
+  width: 10rem;
   display: flex;
   align-items: center;
   justify-content: space-between; }
 
+.fav-num {
+  margin-left: 10px; }
+
 .favorites-div {
   cursor: pointer; }
+
+img {
+  margin-left: 9rem; }
