--- a/src/components/CardContainer/styles.css
+++ b/src/components/CardContainer/styles.css
@@ -1,8 +1,8 @@
 .card-container {
-  flex-wrap: wrap;
-  width: 100%;
   display: flex;
-  justify-content: space-around; }
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%; }
 
 .favorites-text {
   color: #f4f4f4; }
