--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,11 +1,13 @@
 .app {
-  display: flex;
-  align-items: center; }
+  align-items: center;
+  display: flex; }
 
 .welcome-message {
   color: #f3f3f3;
-  width: 100%;
-  text-align: center; }
+  font-size: 20px;
+  margin-top: 50px;
+  text-align: center;
+  width: 100%; }
 
 .header-parent {
   color: #f3f3f3;
@@ -18,19 +20,19 @@
   justify-content: center; }
 
 .movie-parent {
-  display: flex;
   align-self: flex-start;
-  justify-content: center;
+  display: flex;
   height: 100vh;
+  justify-content: center;
   margin: 0;
   width: 25%; }
 
 .card-container-parent {
-  margin-top: 2rem;
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  margin-top: 2rem; }
 
 .main-section {
-  width: 75%;
+  background-color: black;
   min-height: 100vh;
-  background-color: black; }
+  width: 75%; }
