--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,12 +1,14 @@
 .app {
-  display: flex;
   align-items: center;
+  display: flex;
 }
 
 .welcome-message {
   color: #f3f3f3;
-  width: 100%;
+  font-size: 20px;
+  margin-top: 50px;
   text-align: center;
+  width: 100%;
 }
 
 .header-parent {
@@ -22,23 +24,23 @@
 }
 
 .movie-parent {
-  display: flex;
   align-self: flex-start;
-  justify-content: center;
+  display: flex;
   height: 100vh;
+  justify-content: center;
   margin: 0;
   width: 25%;
 }
 
 .card-container-parent {
-  margin-top: 2rem;
   display: flex;
   justify-content: space-around;
+  margin-top: 2rem;
 
 }
 
 .main-section {
-  width: 75%;
-  min-height: 100vh;
   background-color: black;
+  min-height: 100vh;
+  width: 75%;
 }
